<resources>
  <string name="app_name">app-rxjava</string>
  <string name="connect">connect</string>
  <string name="disconnect">disconnect</string>
  <string name="stop_monitoring">stop monitoring</string>
  <string name="start_monitoring">start monitoring</string>
  <string name="waiting_for_raw_signal">waiting for raw signal...</string>
  <string name="waiting_for_blink_signal">waiting for blink signal...</string>
  <string name="waiting_for_meditation_signal">waiting for meditation signal...</string>
  <string name="waiting_for_attention_signal">waiting for attention signal...</string>
  <string name="waiting_for_state">waiting for state...</string>
</resources>
